--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   salomon_bottom_bar: ^3.3.2
   go_router: ^10.0.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
