--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   go_router: ^10.0.0
   http: ^1.1.0
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
